--- a/package.json
+++ b/package.json
@@ -1,5 +1,16 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
     "vercel": "^33.0.2"
-  }
+  },
+  "name": "aro",
+  "version": "1.0.0",
+  "main": "script.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
