--- a/vercel.json
+++ b/vercel.json
@@ -3,7 +3,7 @@
     "name": "aro",
     "builds": [
         {
-            "src": "index.html",
+            "src": "index.js",
             "use": "@vercel/node"
         }
     ],
